--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,6 +28,17 @@ body {
 }
 
 .calc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: absolute;
+    /* top: 0; */
+    left: -245px;
+}
+
+.calc_principal {
     flex-direction: column;
     background-color: #EEE;
     border: 3px solid #BBB;
@@ -38,8 +49,47 @@ body {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     margin-block-start: 26px;
-    margin-inline: auto;
+    padding: 3px 4px;
     z-index: 1000;
+    transition: all 2000ms;
+    -webkit-transition: all 2000ms;
+    -moz-transition: all 2000ms;
+    -ms-transition: all 2000ms;
+    -o-transition: all 2000ms;
+}
+
+.calc_exibir {
+    left: 0px !important;
+    transition: all 2000ms;
+    -webkit-transition: all 2000ms;
+    -moz-transition: all 2000ms;
+    -ms-transition: all 2000ms;
+    -o-transition: all 2000ms;
+}
+
+.calc_aba {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 50px;
+    background-color: rgba(128, 128, 128, .2);
+    border-radius: 0px 5px 5px 0;
+    -webkit-border-radius: 0px 5px 5px 0;
+    -moz-border-radius: 0px 5px 5px 0;
+    -ms-border-radius: 0px 5px 5px 0;
+    -o-border-radius: 0px 5px 5px 0;
+    cursor: pointer;
+    font-weight: bold;
+    color: #fff;
+    transition-property: all;
+    transition-duration: 1200ms;
+    transition-timing-function: linear;
+}
+
+.calc_aba:hover {
+    background-color: rgb(128, 126, 124);
+    color: #800;
 }
 
 /* Título */
